--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <br><br><br><br><br><br>
 <center>
 <h1>Instituto Tecnologico de Orizaba</h1><br>
-      <img src="imgs\LogoITO.png" with="300" height="200"/>
+      <img src="Imgs\LogoITO.png" with="300" height="200"/>
       <h2>Programación WEB</h2>
       <h2>Unidad 3 Javascript</h2>
        <h3>Presenta: Hernandez Reyes Lizzeth</h3>
