--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 <div class="contenedor">
   <ul>
-      <li><a class="active" href="">MENÚ EQUIPO</a></li>
+      <li><a class="active" href="https://maferl21.github.io/Unidad3-Equipo7/">MENÚ EQUIPO</a></li>
       <li><a href="LizParImpar/ParImpar.html">Par e Impar</a></li>
       <li><a href="LizConversionBinHex/Conversion.html">Conversiones Binario/Hexadecimal</a></li>
       <li><a href="LizNuevaVentana/NuevaVent.html">Nueva página </a></li>
@@ -65,7 +65,7 @@
 <br><br><br><br><br><br>
 <center>
 <h1>Instituto Tecnologico de Orizaba</h1><br>
-      <img src="Imgs\LogoITO.png" with="300" height="200"/>
+      <img src="Imgs/LogoITO.png" with="300" height="200"/>
       <h2>Programación WEB</h2>
       <h2>Unidad 3 Javascript</h2>
        <h3>Presenta: Hernandez Reyes Lizzeth</h3>
